--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,32 @@
     <meta property="og:price:currency" content="C$ Cordoba, U$ Dolar"/>
   </head>
   <body>
-    <section class="container"></section>
+    <section class="container">
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://cdni.pornpics.com/1280/5/201/75758265/75758265_001_a654.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/originals/20/c4/98/20c498f4684765ab090137c9fc6cabc3.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/originals/95/94/a9/9594a9074b80160c8ecf730bb09ad822.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/originals/b5/9f/18/b59f18cd75289412ee524176e4f8783a.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
