--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,18 @@
           <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
         </div>
       </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://www.mypornstarbook.net/pornstars/b/brandi_love/gallery136/images/02.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/564x/07/eb/8a/07eb8aeffcda6e5e9a3f37d0ab8b1b9d.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
