agregando nuevo menu

--- a/public/index.html
+++ b/public/index.html
@@ -1,266 +1,115 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="img/favicon.svg" type="image/svg+xml" />
-		<title>Título de la página</title>
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-		/>
-		<link rel="stylesheet" href="css/index.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.7/holder.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<meta name="author" content="" />
-		<meta name="robots" content="index, follow" />
-		<meta name="keywords" content="" />
-		<meta name="description" content="" />
-		<meta http-equiv="cache-control" content="no-cache" />
-		<meta property="fancy:name" content="" />
-		<meta property="fancy:image" content="img/seo/.jpg" />
-		<meta
-			property="fancy:category"
-			content="Diseño web, Sass, Pug, Prepros"
-		/>
-		<meta property="fancy:description" content="" />
-		<link rel="canonical" href="http://dominio.com" />
-		<meta property="og:url" content="http://dominio.com" />
-		<meta property="og:type" content="website" />
-		<meta property="og:image" content="http://dominio.com/img/seo/.jpg" />
-		<meta name="facebook:site" content="@" />
-		<meta property="og:locale" content="es_ES" />
-		<meta name="facebook:creator" content="@" />
-		<meta property="og:description" content="" />
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="@" />
-		<meta name="twitter:image" />
-		<meta name="twitter:title" />
-		<meta name="twitter:creator" content="@" />
-		<meta name="twitter:description" content="" />
-		<meta property="og:url" content="http://dominio.com" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="" />
-		<meta property="og:image" content="http://dominio.com/img/seo/.jpg" />
-		<meta property="og:site_name" content="" />
-		<meta property="og:description" content="" />
-		<meta property="og:price:amount" content="" />
-		<meta property="og:price:currency" content="C$ Cordoba, U$ Dolar" />
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Navbar</a>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div
-					class="collapse navbar-collapse"
-					id="navbarSupportedContent"
-				>
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a
-								class="nav-link active"
-								aria-current="page"
-								href="#"
-							>
-								Home
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Link</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a
-								class="nav-link dropdown-toggle"
-								href="#"
-								id="navbarDropdown"
-								role="button"
-								data-bs-toggle="dropdown"
-								aria-expanded="false"
-							>
-								Dropdown
-							</a>
-							<ul
-								class="dropdown-menu"
-								aria-labelledby="navbarDropdown"
-							>
-								<li>
-									<a class="dropdown-item" href="#">Action</a>
-								</li>
-								<li>
-									<a class="dropdown-item" href="#">
-										Another action
-									</a>
-								</li>
-								<li><hr class="dropdown-divider" /></li>
-								<li>
-									<a class="dropdown-item" href="#">
-										Something else here
-									</a>
-								</li>
-							</ul>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link disabled"
-								href="#"
-								tabindex="-1"
-								aria-disabled="true"
-							>
-								Disabled
-							</a>
-						</li>
-					</ul>
-					<form class="d-flex">
-						<input
-							class="form-control me-2"
-							type="search"
-							placeholder="Search"
-							aria-label="Search"
-						/>
-						<button class="btn btn-outline-success" type="submit">
-							Search
-						</button>
-					</form>
-				</div>
-			</div>
-		</nav>
-		<section class="container">
-			<article class="card" style="width: 18rem">
-				<img
-					class="card-img-top"
-					src="https://cdni.pornpics.com/1280/5/201/75758265/75758265_001_a654.jpg"
-					alt=""
-					srcset=""
-				/>
-				<div class="card-body">
-					<h1 class="card-title">Kendra Lust</h1>
-					<p class="card-text">
-						Presentación de su nueva línea de lencería para que
-						demuestres tu lado más candente y sensual
-					</p>
-					<a class="btn btn-primary" href="" target="_blank">
-						<i class="bi bi-cart-check-fill"></i>
-						Adquierela aquí
-					</a>
-				</div>
-			</article>
-			<article class="card" style="width: 18rem">
-				<img
-					class="card-img-top"
-					src="https://i.pinimg.com/originals/20/c4/98/20c498f4684765ab090137c9fc6cabc3.jpg"
-					alt=""
-					srcset=""
-				/>
-				<div class="card-body">
-					<h1 class="card-title">Kendra Lust</h1>
-					<p class="card-text">
-						Presentación de su nueva línea de lencería para que
-						demuestres tu lado más candente y sensual
-					</p>
-					<a class="btn btn-primary" href="" target="_blank">
-						<i class="bi bi-cart-check-fill"></i>
-						Adquierela aquí
-					</a>
-				</div>
-			</article>
-			<article class="card" style="width: 18rem">
-				<img
-					class="card-img-top"
-					src="https://i.pinimg.com/originals/95/94/a9/9594a9074b80160c8ecf730bb09ad822.jpg"
-					alt=""
-					srcset=""
-				/>
-				<div class="card-body">
-					<h1 class="card-title">Kendra Lust</h1>
-					<p class="card-text">
-						Presentación de su nueva línea de lencería para que
-						demuestres tu lado más candente y sensual
-					</p>
-					<a class="btn btn-primary" href="" target="_blank">
-						<i class="bi bi-cart-check-fill"></i>
-						Adquierela aquí
-					</a>
-				</div>
-			</article>
-			<article class="card" style="width: 18rem">
-				<img
-					class="card-img-top"
-					src="https://i.pinimg.com/originals/b5/9f/18/b59f18cd75289412ee524176e4f8783a.jpg"
-					alt=""
-					srcset=""
-				/>
-				<div class="card-body">
-					<h1 class="card-title">Kendra Lust</h1>
-					<p class="card-text">
-						Presentación de su nueva línea de lencería para que
-						demuestres tu lado más candente y sensual
-					</p>
-					<a class="btn btn-primary" href="" target="_blank">
-						<i class="bi bi-cart-check-fill"></i>
-						Adquierela aquí
-					</a>
-				</div>
-			</article>
-			<article class="card" style="width: 18rem">
-				<img
-					class="card-img-top"
-					src="https://www.mypornstarbook.net/pornstars/b/brandi_love/gallery136/images/02.jpg"
-					alt=""
-					srcset=""
-				/>
-				<div class="card-body">
-					<h1 class="card-title">Kendra Lust</h1>
-					<p class="card-text">
-						Presentación de su nueva línea de lencería para que
-						demuestres tu lado más candente y sensual
-					</p>
-					<a class="btn btn-primary" href="" target="_blank">
-						<i class="bi bi-cart-check-fill"></i>
-						Adquierela aquí
-					</a>
-				</div>
-			</article>
-			<article class="card" style="width: 18rem">
-				<img
-					class="card-img-top"
-					src="https://i.pinimg.com/564x/07/eb/8a/07eb8aeffcda6e5e9a3f37d0ab8b1b9d.jpg"
-					alt=""
-					srcset=""
-				/>
-				<div class="card-body">
-					<h1 class="card-title">Kendra Lust</h1>
-					<p class="card-text">
-						Presentación de su nueva línea de lencería para que
-						demuestres tu lado más candente y sensual
-					</p>
-					<a class="btn btn-primary" href="" target="_blank">
-						<i class="bi bi-cart-check-fill"></i>
-						Adquierela aquí
-					</a>
-				</div>
-			</article>
-		</section>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="icon" href="img/favicon.svg" type="image/svg+xml"/>
+    <title>Título de la página</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.7/holder.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <meta name="author" content=""/>
+    <meta name="robots" content="index, follow"/>
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
+    <meta http-equiv="cache-control" content="no-cache"/>
+    <meta property="fancy:name" content=""/>
+    <meta property="fancy:image" content="img/seo/.jpg"/>
+    <meta property="fancy:category" content="Diseño web, Sass, Pug, Prepros"/>
+    <meta property="fancy:description" content=""/>
+    <link rel="canonical" href="http://dominio.com"/>
+    <meta property="og:url" content="http://dominio.com"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="http://dominio.com/img/seo/.jpg"/>
+    <meta name="facebook:site" content="@"/>
+    <meta property="og:locale" content="es_ES"/>
+    <meta name="facebook:creator" content="@"/>
+    <meta property="og:description" content=""/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@"/>
+    <meta name="twitter:image"/>
+    <meta name="twitter:title"/>
+    <meta name="twitter:creator" content="@"/>
+    <meta name="twitter:description" content=""/>
+    <meta property="og:url" content="http://dominio.com"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content=""/>
+    <meta property="og:image" content="http://dominio.com/img/seo/.jpg"/>
+    <meta property="og:site_name" content=""/>
+    <meta property="og:description" content=""/>
+    <meta property="og:price:amount" content=""/>
+    <meta property="og:price:currency" content="C$ Cordoba, U$ Dolar"/>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid"><a class="navbar-brand" href="#">Gity GitHub</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider"/>
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a></li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <section class="container">  
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://cdni.pornpics.com/1280/5/201/75758265/75758265_001_a654.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/originals/20/c4/98/20c498f4684765ab090137c9fc6cabc3.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/originals/95/94/a9/9594a9074b80160c8ecf730bb09ad822.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/originals/b5/9f/18/b59f18cd75289412ee524176e4f8783a.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://www.mypornstarbook.net/pornstars/b/brandi_love/gallery136/images/02.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+      <article class="card" style="width: 18rem"><img class="card-img-top" src="https://i.pinimg.com/564x/07/eb/8a/07eb8aeffcda6e5e9a3f37d0ab8b1b9d.jpg" alt="" srcset=""/>
+        <div class="card-body">
+          <h1 class="card-title">Kendra Lust</h1>
+          <p class="card-text">Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual</p><a class="btn btn-primary" href="" target="_blank"><i class="bi bi-cart-check-fill"></i>Adquierela aquí</a>
+        </div>
+      </article>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
