--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
   </head>
   <body>
     <section class="container">
+      <h1 class="text-center">Catálogo de Lencería, antes del stash</h1>
       <article class="card" style="width: 18rem"><img class="card-img-top" src="https://cdni.pornpics.com/1280/5/201/75758265/75758265_001_a654.jpg" alt="" srcset=""/>
         <div class="card-body">
           <h1 class="card-title">Kendra Lust</h1>
