integrando el stash

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,32 @@
     <meta property="og:price:currency" content="C$ Cordoba, U$ Dolar"/>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid"><a class="navbar-brand" href="#">Gity GitHub</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicia</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Enlace</a></li>
+            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">+ Menú</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider"/>
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">No disponible</a></li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+            <button class="btn btn-outline-success" type="submit">Búsqueda</button>
+          </form>
+        </div>
+      </div>
+    </nav>
     <section class="container">
       <h1 class="text-center">Catálogo de Lencería, antes del stash</h1>
       <article class="card" style="width: 18rem"><img class="card-img-top" src="https://cdni.pornpics.com/1280/5/201/75758265/75758265_001_a654.jpg" alt="" srcset=""/>
